<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="dialog"
            type="com.strawberryswing.upmusic.dialog.DialogMenu" />
    </data>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:orientation="vertical">

        <android.support.constraint.ConstraintLayout
            android:layout_width="283dp"
            android:layout_height="77dp"
            android:background="#af9e8d">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/menu_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="test"
                    android:textColor="#ffffff"
                    android:textSize="15dp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:text="@string/menu_welcome"
                    android:textColor="#ffffff"
                    android:textSize="13dp"
                    android:textStyle="bold" />
            </LinearLayout>

            <RelativeLayout
                android:id="@+id/menu_close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{dialog::onClick}"
                android:padding="10dp"
                app:layout_constraintRight_toRightOf="parent">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/close" />
            </RelativeLayout>

        </android.support.constraint.ConstraintLayout>

        <LinearLayout
            android:layout_width="283dp"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/menu01"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/zxc"
                android:gravity="center"
                android:onClick="@{dialog::onClick}"
                android:orientation="horizontal">

                <android.support.constraint.ConstraintLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="16dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/m_infobtn1"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/summary_txt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="15dp"
                        android:layout_marginLeft="18dp"
                        android:background="@drawable/el"
                        android:gravity="center"
                        android:text="1"
                        android:textColor="#ffffff"
                        android:textSize="10dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent" />
                </android.support.constraint.ConstraintLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/menu_title01"
                    android:textColor="#af9e8d"
                    android:textSize="12dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/menu02"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/zxc"
                android:gravity="center"
                android:onClick="@{dialog::onClick}"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="16dp"
                    android:background="@drawable/m_infobtn2" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/menu_title02"
                    android:textColor="#af9e8d"
                    android:textSize="12dp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="283dp"
            android:layout_height="wrap_content"
            android:background="#eeeeee"
            android:orientation="vertical"
            android:padding="27dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="108dp"
                android:layout_marginBottom="13dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/menu03"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginRight="13dp"
                    android:layout_weight="1"
                    android:background="@drawable/zxc"
                    android:gravity="center"
                    android:onClick="@{dialog::onClick}"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/contenticon1" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="18dp"
                        android:text="@string/menu_title03"
                        android:textColor="#666666"
                        android:textSize="12dp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/menu04"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/zxc"
                    android:gravity="center"
                    android:onClick="@{dialog::onClick}"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/contenticon2" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="18dp"
                        android:text="@string/menu_title04"
                        android:textColor="#666666"
                        android:textSize="12dp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="108dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/menu05"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginRight="13dp"
                    android:layout_weight="1"
                    android:background="@drawable/zxc"
                    android:gravity="center"
                    android:onClick="@{dialog::onClick}"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/contenticon3" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="18dp"
                        android:text="@string/menu_title05"
                        android:textColor="#666666"
                        android:textSize="12dp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/menu06"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/zxc"
                    android:gravity="center"

                    android:onClick="@{dialog::onClick}"

                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/contenticon4" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="18dp"
                        android:text="@string/menu_title06"
                        android:textColor="#666666"
                        android:textSize="12dp" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</layout>
